staging: xroeframer: Add support for radio over ethernet frame
The "Radio Over Ethernet Framer" IP (roe_framer) ingests/generates Ethernet
packet data, (de-)multiplexes packets based on protocol into/from various
Radio Antenna data streams.

As the IRQ is not yet fully implemented in the hardware, the probe will
return 0 instead of propagating the error returned by attempting to
allocate the IRQ. A TODO to fix that once it's finalised in the hardware
design has been added along with the change.

To reflect a recent change in the hardware design, RADIO_CTRL_BASE has
been changed from 0xA0030000 to 0xA0060000 in xroe_framer.h.
This is to be skipped altogether along with any remaining hard-coded
values when the secondary devices are properly implemented
in the device tree.

Signed-off-by: Vasileios Bimpikas <vasileios.bimpikas@xilinx.com>
Signed-off-by: Michal Simek <michal.simek@xilinx.com>
[Quanyang: original patch taken from
https://github.com/Xilinx/linux-xlnx.git xlnx_rebase_v4.19]
Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/drivers/staging/Makefile
+++ b/drivers/staging/Makefile
@@ -54,3 +54,4 @@ obj-$(CONFIG_STAGING_EXFAT_FS)	+= exfat/
 obj-$(CONFIG_QLGE)		+= qlge/
 obj-$(CONFIG_NET_VENDOR_HP)	+= hp/
 obj-$(CONFIG_WFX)		+= wfx/
+obj-$(CONFIG_XROE_FRAMER)	+= xroeframer/
