--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -129,4 +129,6 @@ source "drivers/staging/wfx/Kconfig"
 
 source "drivers/staging/xroeframer/Kconfig"
 
+source "drivers/staging/xroetrafficgen/Kconfig"
+
 endif # STAGING
