--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -127,6 +127,8 @@ source "drivers/staging/hp/Kconfig"
 
 source "drivers/staging/wfx/Kconfig"
 
+source "drivers/staging/xlnx_ctrl_driver/Kconfig"
+
 source "drivers/staging/xroeframer/Kconfig"
 
 source "drivers/staging/xroetrafficgen/Kconfig"
