--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -131,4 +131,6 @@ source "drivers/staging/xroeframer/Kconfig"
 
 source "drivers/staging/xroetrafficgen/Kconfig"
 
+source "drivers/staging/xlnxsync/Kconfig"
+
 endif # STAGING
