--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -129,6 +129,8 @@ source "drivers/staging/wfx/Kconfig"
 
 source "drivers/staging/xlnx_ctrl_driver/Kconfig"
 
+source "drivers/staging/xlnx_ernic/Kconfig"
+
 source "drivers/staging/xroeframer/Kconfig"
 
 source "drivers/staging/xroetrafficgen/Kconfig"
