--- a/drivers/staging/Makefile
+++ b/drivers/staging/Makefile
@@ -55,5 +55,6 @@ obj-$(CONFIG_QLGE)		+= qlge/
 obj-$(CONFIG_NET_VENDOR_HP)	+= hp/
 obj-$(CONFIG_WFX)		+= wfx/
 obj-y                          += xlnx_ctrl_driver/
+obj-$(CONFIG_ERNIC)		+= xlnx_ernic/
 obj-$(CONFIG_XROE_FRAMER)	+= xroeframer/
 obj-$(CONFIG_XLNX_SYNC)		+= xlnxsync/
