arm64: zynqmp: List zcu1285 in xilinx.txt binding file
Record missing compatible string for zcu1285.
Also fix description in DTS file.

Signed-off-by: Michal Simek <michal.simek@xilinx.com>
[Quanyang: original patch taken from
https://github.com/Xilinx/linux-xlnx.git xlnx_rebase_v4.19]
Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/Documentation/devicetree/bindings/arm/xilinx.yaml
+++ b/Documentation/devicetree/bindings/arm/xilinx.yaml
@@ -64,6 +64,12 @@ properties:
           - const: xlnx,zynqmp-zcu1275
           - const: xlnx,zynqmp
 
+      - description: Xilinx RFSoC chracterization kit zcu1285
+        items:
+          - const: xlnx,zynqmp-zcu1285-revA
+          - const: xlnx,zynqmp-zcu1285
+          - const: xlnx,zynqmp
+
       - description: Xilinx 96boards compatible board zcu100
         items:
           - const: xlnx,zynqmp-zcu100-revC
