--- a/drivers/net/ethernet/xilinx/Kconfig
+++ b/drivers/net/ethernet/xilinx/Kconfig
@@ -33,7 +33,7 @@ config XILINX_AXI_EMAC
 config XILINX_AXI_EMAC_HWTSTAMP
 	bool "Generate hardware packet timestamps"
 	depends on XILINX_AXI_EMAC
-	select PTP_1588_CLOCK
+	depends on PTP_1588_CLOCK
 	default n
 	---help---
 	  Generate hardware packet timestamps. This is to facilitate IEEE 1588.
@@ -62,7 +62,7 @@ config XILINX_TSN
 config XILINX_TSN_PTP
 	bool "Generate hardware packet timestamps using Xilinx's TSN IP"
 	depends on XILINX_TSN
-	select PTP_1588_CLOCK
+	depends on PTP_1588_CLOCK
 	default y
 	---help---
 	  Generate hardware packet timestamps. This is to facilitate IEEE 1588.
@@ -70,7 +70,7 @@ config XILINX_TSN_PTP
 config XILINX_TSN_QBV
 	bool "Support Qbv protocol in TSN"
 	depends on XILINX_TSN_PTP
-	select PTP_1588_CLOCK
+	depends on PTP_1588_CLOCK
 	default y
 	---help---
 	  Enables TSN Qbv protocol.
