--- a/arch/powerpc/Makefile
+++ b/arch/powerpc/Makefile
@@ -417,6 +417,9 @@ endif
 archclean:
 	$(Q)$(MAKE) $(clean)=$(boot)
 
+arch/powerpc/lib/crtsavres.o: arch/powerpc/lib/crtsavres.S
+	$(Q)$(MAKE) $(build)=arch/powerpc/lib arch/powerpc/lib/crtsavres.o
+
 archprepare: checkbin arch/powerpc/lib/crtsavres.o
 
 archheaders:
