--- a/drivers/soc/imx/Kconfig
+++ b/drivers/soc/imx/Kconfig
@@ -21,6 +21,16 @@ config IMX8M_BUSFREQ
 	bool "i.MX8M busfreq"
 	depends on ARCH_MXC && ARM64
 
+config SECVIO_SC
+	tristate "NXP SC secvio support"
+	depends on IMX_SCU
+	help
+	  If you say yes here you get support for the NXP SNVS security
+	  violation module. It includes the possibility to read information
+	  related to security violations and tampers. It also gives the
+	  possibility to register user callbacks when a security violation
+	  occurs
+
 config IMX8M_PM_DOMAINS
 	bool "i.MX8M PM domains"
 	depends on ARCH_MXC || (COMPILE_TEST && OF)
