--- a/drivers/mxc/Kconfig
+++ b/drivers/mxc/Kconfig
@@ -10,6 +10,7 @@ source "drivers/mxc/hantro_845_h1/Kconfig"
 source "drivers/mxc/hantro_vc8000e/Kconfig"
 source "drivers/mxc/vpu/Kconfig"
 source "drivers/mxc/hdmi-cec/Kconfig"
+source "drivers/mxc/xuvi/Kconfig"
 
 endmenu
 
