--- a/sound/soc/fsl/Kconfig
+++ b/sound/soc/fsl/Kconfig
@@ -580,6 +580,14 @@ config SND_SOC_IMX_CDNHDMI
 	  Say Y if you want to add support for SoC audio on an i.MX board with
 	  IMX CDN HDMI.
 
+config SND_SOC_IMX_XCVR
+	tristate "SoC Audio support for i.MX boards with XCVR"
+	select SND_SOC_FSL_XCVR
+	help
+	  SoC Audio support for i.MX boards with Audio Transceiver (XCVR)
+	  Say Y if you want to add support for SoC audio on an i.MX board with
+	  an Audio Transceiver (XCVR).
+
 config SND_SOC_IMX_PDM_MIC
 	tristate "SoC Audio support for i.MX boards with PDM mic on SAI"
 	depends on OF
