--- a/sound/soc/fsl/Makefile
+++ b/sound/soc/fsl/Makefile
@@ -95,7 +95,9 @@ snd-soc-imx-mc13783-objs := imx-mc13783.o
 snd-soc-imx-audmix-objs := imx-audmix.o
 snd-soc-imx-si476x-objs := imx-si476x.o
 snd-soc-imx-rpmsg-objs := imx-rpmsg.o
+snd-soc-imx-xcvr-objs := imx-xcvr.o
 snd-soc-imx-hdmi-objs := imx-hdmi.o
+obj-$(CONFIG_SND_SOC_IMX_XCVR) += snd-soc-imx-xcvr.o
 snd-soc-imx-cdnhdmi-objs := imx-cdnhdmi.o
 snd-soc-imx-dsp-objs := imx-dsp.o
 snd-soc-imx-mqs-objs := imx-mqs.o
