LF-1409-05: media: isi: config ISI HW driver as a separate driver
commit  from
https://source.codeaurora.org/external/imx/linux-imx

In order to decouple ISI core, capture and mem2mem driver, need to config
imx8-isi-hw.c as a separate driver and build as tristate

Signed-off-by: Guoniu.zhou <guoniu.zhou@nxp.com>
Reviewed-by: Robby Cai <robby.cai@nxp.com>
Signed-off-by: Xiaolei Wang <xiaolei.wang@windriver.com>

--- a/drivers/staging/media/imx/Kconfig
+++ b/drivers/staging/media/imx/Kconfig
@@ -165,6 +165,15 @@ config IMX8_ISI_CORE
 	depends on VIDEO_V4L2 && VIDEO_V4L2_SUBDEV_API
 	default y
 
+config IMX8_ISI_HW
+	tristate "IMX8 Image Sensor Interface hardware driver"
+	depends on VIDEO_V4L2 && VIDEO_V4L2_SUBDEV_API
+	default y
+	help
+	  ISI hardware driver is used to export functions to config
+	  ISI registers and it is shared by isi capture and mem2mem
+	  driver
+
 config IMX8_ISI_CAPTURE
 	bool "IMX8 Image Sensor Interface Capture Device Driver"
 	depends on IMX8_ISI_CORE
