LF-1409-08: media: isi: core: config ISI core driver as tristate
commit  from
https://source.codeaurora.org/external/imx/linux-imx

Config isi core driver as tristate

Signed-off-by: Guoniu.zhou <guoniu.zhou@nxp.com>
Reviewed-by: Robby Cai <robby.cai@nxp.com>
Signed-off-by: Xiaolei Wang <xiaolei.wang@windriver.com>

--- a/drivers/staging/media/imx/Kconfig
+++ b/drivers/staging/media/imx/Kconfig
@@ -161,8 +161,8 @@ if VIDEO_IMX_CAPTURE
 menu "i.MX8QXP/QM Camera ISI/MIPI Features support"
 
 config IMX8_ISI_CORE
-	bool "IMX8 Image Sensor Interface Core Driver"
-	depends on VIDEO_V4L2 && VIDEO_V4L2_SUBDEV_API
+	tristate "IMX8 Image Sensor Interface Core Driver"
+	depends on IMX8_ISI_CAPTURE && IMX8_ISI_M2M
 	default y
 
 config IMX8_ISI_HW
