--- a/drivers/gpu/drm/imx/Kconfig
+++ b/drivers/gpu/drm/imx/Kconfig
@@ -83,16 +83,6 @@ config DRM_IMX_HDMI
 
 source "drivers/gpu/drm/imx/dcss/Kconfig"
 
-config DRM_IMX_CDNS_MHDP
-	tristate "NXP i.MX MX8 DRM HDMI/DP"
-	select DRM_CDNS_MHDP
-	select DRM_CDNS_DP
-	select DRM_CDNS_HDMI
-	select DRM_CDNS_AUDIO
-	depends on DRM_IMX
-	help
-	  Choose this if you want to use HDMI on i.MX8.
-
 config DRM_IMX_SEC_DSIM
 	tristate "Support for Samsung MIPI DSIM displays"
 	depends on DRM_IMX
@@ -105,3 +95,4 @@ config DRM_IMX_SEC_DSIM
 source "drivers/gpu/drm/imx/lcdif/Kconfig"
 source "drivers/gpu/drm/imx/lcdifv3/Kconfig"
 source "drivers/gpu/drm/imx/dpu/Kconfig"
+source "drivers/gpu/drm/imx/mhdp/Kconfig"
