--- a/arch/arm64/boot/dts/freescale/imx8mm.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8mm.dtsi
@@ -841,7 +841,7 @@
 			};
 
 			ecspi1: spi@30820000 {
-				compatible = "fsl,imx8mm-ecspi", "fsl,imx6ul-ecspi";
+				compatible = "fsl,imx8mm-ecspi", "fsl,imx51-ecspi";
 				#address-cells = <1>;
 				#size-cells = <0>;
 				reg = <0x30820000 0x10000>;
@@ -855,7 +855,7 @@
 			};
 
 			ecspi2: spi@30830000 {
-				compatible = "fsl,imx8mm-ecspi", "fsl,imx6ul-ecspi";
+				compatible = "fsl,imx8mm-ecspi", "fsl,imx51-ecspi";
 				#address-cells = <1>;
 				#size-cells = <0>;
 				reg = <0x30830000 0x10000>;
@@ -869,7 +869,7 @@
 			};
 
 			ecspi3: spi@30840000 {
-				compatible = "fsl,imx8mm-ecspi", "fsl,imx6ul-ecspi";
+				compatible = "fsl,imx8mm-ecspi", "fsl,imx51-ecspi";
 				#address-cells = <1>;
 				#size-cells = <0>;
 				reg = <0x30840000 0x10000>;
